testsuite/tests/typecheck/no_skolem_info/T10946_sk.stderr

T10946_sk.hs:6:13: error:
    • Found hole: _ :: a
      Where: ‘a’ is a rigid type variable bound by
               the type signature for:
                 m :: forall a. a -> a
               at T10946_sk.hs:5:1-11
    • In the Template Haskell quotation [|| _ ||]
      In the expression: [|| _ ||]
      In the Template Haskell splice $$([|| _ ||])
    • Relevant bindings include
        x :: a (bound at T10946_sk.hs:6:3)
        m :: a -> a (bound at T10946_sk.hs:6:1)
      Valid hole fits include x :: a (bound at T10946_sk.hs:6:3)
