testsuite/tests/typecheck/no_skolem_info/T10946_sk.hs
{-# LANGUAGE TemplateHaskell #-}

module Bug where

m :: a -> a
m x = $$([||_||])
